# python-fastembed.v2

./: .gitignore  001_basic.ipynb  002_qdrant_client.ipynb  003_fastembed_text_embeddings.ipynb  004_production_ready.ipynb  005_splade.ipynb  006_generate_colbert_multivectors.ipynb  007_reranking_fastembed.ipynb  008_smalldocling.ipynb  010_long_context.ipynb  Makefile  ar101_001_collaborative_filtering.ipynb  ar101_002_multilingual_and_multimodal.ipynb  e_001_data_ingestion.ipynb  e_002_rag_deepseek.ipynb  glossary.ipynb  main.py  pyproject.toml  ss101_001_basic.ipynb  ss101_002_build_neural_search.ipynb  ss101_003_hybrid_search.ipynb  ss101_004_measure_and_improve_retrieval_quality.ipynb
docs/: 001_basic.html  002_qdrant_client.html  003_fastembed_text_embeddings.html  004_production_ready.html  005_splade.html  006_generate_colbert_multivectors.html  007_reranking_fastembed.html  008_smalldocling.html  010_long_context.html  ar101_001_collaborative_filtering.html  ar101_002_multilingual_and_multimodal.html  ar101_003_navigate_codebase.html  e_001_data_ingestion.html  e_002_rag_deepseek.html  glossary.html  index.html  search.json  ss101_001_basic.html  ss101_002_build_neural_search.html  ss101_003_hybrid_search.html  ss101_004_measure_and_improve_retrieval_quality.html
docs/images/: ar101_003_navigate_codebase.html
images/: ar101_003_navigate_codebase.ipynb
