[project]
name = "python-fastembed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "datasets>=3.4.1",
    "inflection>=0.5.1",
    "ipywidgets>=8.1.5",
    "isort>=6.0.1",
    "jupyter-ai[all]>=2.31.0",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-vim>=4.1.4",
    "llama-index-embeddings-huggingface>=0.5.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "onnx>=1.17.0",
    "optimum>=1.24.0",
    "pandas>=2.2.3",
    "qdrant-client[fastembed]>=1.13.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.4.1",
    "tqdm>=4.67.1",
    "unstructured[pdf]>=0.17.2",
]
